--- a/angelo/index.html
+++ b/angelo/index.html
@@ -5,13 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
+    <link href="styles.css" rel="stylesheet"></link>
 </head>
-<style>
-    body{
-       background-color: #c4aee2; 
-       color: #fffafa;
-    }
-</style>
 <body>
     <div>
         <form>
@@ -27,5 +22,7 @@
     <div>
         <input type="submit" value="Enter!">
     </div>
+
+    <a href="08.html">08</a>
 </body>
 </html>
