--- a/glaucio/index.html
+++ b/glaucio/index.html
@@ -20,6 +20,6 @@
             <p>Altura média dos homens: <span id="altura-media-homens">0.00</span> cm</p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="nivelamento.js"></script>
 </body>
 </html>
