--- a/glaucio/index.html
+++ b/glaucio/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Altura Média</title>
+    <title>Average Height Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Altura Média</h1>
+        <h1>Average Height Calculator:/h1>
         <div id="input-form">
-            <button onclick="adicionarDado()">Adicionar Dado</button>
-            <button onclick="calcularResultados()">Calcular Resultados</button>
+            <button onclick="addData()">Add Data</button>
+            <button onclick="calculateResult()">Calculate Result</button>
         </div>
         <div id="resultado">
-            <h2>Resultados:</h2>
-            <p>Quantidade de homens: <span id="quantidade-homens">0</span></p>
-            <p>Quantidade de mulheres: <span id="quantidade-mulheres">0</span></p>
-            <p>Altura média dos homens: <span id="altura-media-homens">0.00</span> cm</p>
+            <h2>Results:</h2>
+            <p>Men's quantity: <span id="men-quantity">0</span></p>
+            <p>Women's quantity: <span id="women-quantity">0</span></p>
+            <p>Men's average height: <span id="average-height">0.00</span> cm</p>
         </div>
     </div>
     <script src="nivelamento.js"></script>
